--- a/homePage/home.html
+++ b/homePage/home.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <title></title>
     <script src="./index.js" charset="utf-8"></script>
-    <script src="../config.js" charset="utf-8"></script>
   </head>
   <body>
     <h4>Hi Hi Hi</h4>
@@ -13,6 +12,11 @@
   </body>
 </html>
 <script type="text/javascript">
-  title.innerHTML=atTime.getBankCard.Care();
-  time.innerHTML=atTime.getNowDate('yyyy-mm-dd');
+  var data=new atTime({
+    'name':'JasonChan'
+  });
+  console.log(data,'===============')
+  title.innerHTML=data.getBankCard.Care();
+  time.innerHTML=data.getNowDate('yyyy-mm-dd');
+var a = new Fn();
 </script>
